--- a/VRChat/52/932052.html
+++ b/VRChat/52/932052.html
@@ -76,27 +76,49 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
+  </head>
+  <body>
+    <div class="mini-player-controller" style="display: none;">
+      <a class="scroller" data-smooth-scroll="true"><img class=
+      "mini-player-controller__image" src=
+      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
+      data-smooth-scroll="true">
+      <div class="mini-player-information__item-name"></div>
+      <div class="mini-player-information__shop-name"></div>
+      <div class="mini-player-information__navigation">
+        試聴中の商品へスクロール
+      </div></a>
+      <div class="mini-player-controls">
+        <div class="mini-player-mode-ui">
+          <div class="mini-player-mode-ui__knob"></div>
+          <div class="mini-player-mode-ui__short">
+            15秒
+          </div>
+          <div class="mini-player-mode-ui__full">
+            フル
+          </div>
+        </div>
+        <div class="mini-player-play-ui"></div>
+      </div>
+    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WBvW+5uJ6xr2rW/i9DgPidtuiXODAU5sTHoI1KstBhE="></script>
+    "VAAIVr77M/Apsf3BagHYNha//eS6G8FL6J9vmYwXJyE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRアバター用オリジナルモデルAngelicaMaidSuitMkIII「アンジェリカ　メイドスーツ」Version2.1","description":"VRchat用オリジナルモデル「Angelica」MaidSuitMkIII　バージョン2.0\n\n「Angelica」MaidSuitMkIII　期間限定セール！\nVKetに合わせ8月中半額、セットアップ済みVRC用assetです。\n\n■Angelicaとは？\n当方がFalloutNewVegasのMODで作った幼女キャラクター（今も無料でどこかにあります）を現在の技術で再デザインしたものです。\n\nQ：昔のAngelicaと微妙に違うのは？\nA：単純に自分の技術向上と当時のMODは何かからの流用の流用の流用で元がなにかわからない様な物でしたから記憶を頼りに再構成したためです。\n\n\n■この装備は\nMOD時代をご存知の方には馴染み深いでしょう、クロスがうまく動作してないのでバージョンアップで修正予定です、告知などはツイッターでしますのでぜひフォローしてくださいね。\n\nhttps://twitter.com/KoKoRoBoUZu\n\n■新旧の違い\nAngelica_MaidSuitMKIII103.zipを基準にAngelica_MaidSuitMKIII_2.zipは以下のように違います\n髪、顔、手メッシュの修正、修正というより別人になりました\nVR用ボーン修正、素の状態でもあまり不具合はないはずです。\n表情追加、ウインク、舌出しなどが増えています。\nポリゴン数増大、顔と手、がなめらかになりました。\nバストサイズ変更可能になりました\nShaderがユニティちゃんShaderに変わりました\n\n\n\n■基本データ構成\n旧Polygon数17000　Angelica_MaidSuitMKIII103.zip\n新Polygon数34400　Angelica_MaidSuitMKIII_2.zip\n\nTexture2048x2048 2セット（デフューズ、ノーマル、スペキュラ）\nMaterial数５\nUnityアセット形式１\nVRchat用のリップシンク、ブリンクシェイプ内包\nスカートオブジェクト等が分離しているためハイレグメイドに変形可能\n購入者自身での設定が必要ですが「笑顔」「＞＜」「＝＝」「▽」「企み」「猫口」シェイプも入っています\nスカートにcross処理を暫定で追加してありますが初期状態は非表示なので必要な方だけ表示にしてください。\n\n\n■■■■Unityアセットでの注意事項■■■■\n●揺れもの\n髪、乳、スカートその他の揺れ物に有料の「　DynamicBone　」を使っています、お持ちでない場合はMissingとなり揺れません。\nDynamicBoneが先にインポートされてる状態で本アセットのインポートをして下さい、逆だとはMissingとなり揺れません。\n\n\n●Shader\nShaderに無料の「　ユニティちゃんトゥーンシェーダー2.0　」を使っています下記よりダウンして使ってください、入れることができない人は全てのShaderを標準のUI/Textureにすれば大体似たイメージになります。\n\nhttp://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n\n\n\n■■■■禁止事項　免責事項■■■■\n■このモデルで許可される事\n　・購入者がご自身のアバターとしての使用する改変は自由です。\n　・アバターモデルとした動画等への使用は自由です。\n　・非営利アイコンや壁紙の使用は自由です。\n\n\n■禁止事項\n\n　・改変非改変にかかわらず再配布は禁止します。\n\n　・改変非改変にかかわらずゲームでの使用は禁止します。\n　　　※当方作成中ゲーム内出場予定なので。\n\n　・エロ、グロ等18禁への公共の場での使用は禁止。\n　　　※プライベートで非公開な使用は当てはまりません、存分にご使用ください。\n\n　・商用利用禁止\n　　　※商用利用可能なmodelはAssetStore等で販売しますのでそちらをご使用ください。\n　　　※YouTubeなどでアバターとして動画による収入は許可します。\n　　　　┗多大なキャラ付けをしたストーリー仕立ての使用は禁止します。\n　　　　\n\n■免責事項\n当モデルを使用することで使用者側に不利な問題が生じた場合、\nそれがいかなるものであっても配布元は一切責任を負いません。\n\n","url":"https://booth.pm/ja/items/932052","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2000","highPrice":"3500"},"image":"https://booth.pximg.net/c/620x620/e3df372d-7b3e-4861-9106-df71df45ccc4/i/932052/6f99513d-c625-4495-a29e-8ef58f57121e_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed">
-  </head>
-  <body>
-    <noscript><iframe height="0" src=
-    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed"><noscript><iframe height="0"
+    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WBvW+5uJ6xr2rW/i9DgPidtuiXODAU5sTHoI1KstBhE="></script>
+    nonce="VAAIVr77M/Apsf3BagHYNha//eS6G8FL6J9vmYwXJyE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -678,9 +700,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
