--- a/VRChat/71/938771.html
+++ b/VRChat/71/938771.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IXefkRdT2zzrOQod2BS+4/sk7tb+v4/JKlzwKxlu1yQ="></script>
+    "rbGleKv6I60pnGw1POgQ19OXGKaFJ1xyyTPW1wLWzag="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おためしあんだーりむめがね","description":"なんの変哲もないアンダーリムの赤眼鏡です。VRChatでの利用を想定しています。\n\nVRChatでもっと眼鏡流行れ！という気持ちで配布をしてみました。\n\n(7/23追加)ノーマルタイプとやや幅広タイプの2種類を同梱しています。モデルに合わせてご利用ください。\n\n■使用上の注意\nモデルに組み込んでの利用→商用、非商用を問わず自由に改変、使用、再配布可\n単体での改変、再配布→不可\n\n使用したSSをSNS等に上げると作者が喜びます\n\n■利用方法や仕様\nfbxファイルなので、そのままUnityにぶちこんでHeadアーマチュアの下に入れれば使うことが出来るかと思います。\nテクスチャを貼っていないので、シェーダーの設定を推奨します。\n\nポリゴン数：420(幅広タイプ440)\n\n\nはじめての素材配布なため何か不備等あるかもしれません、その際はツイッター(@popico_VT)までご連絡いただければ幸いです。","url":"https://booth.pm/ja/items/938771","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/938771/789f337f-d166-410e-9653-1470113fa6c7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IXefkRdT2zzrOQod2BS+4/sk7tb+v4/JKlzwKxlu1yQ="></script>
+    nonce="rbGleKv6I60pnGw1POgQ19OXGKaFJ1xyyTPW1wLWzag="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -348,9 +348,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
