--- a/VRChat/71/938371.html
+++ b/VRChat/71/938371.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "tlWqK1rVDcD0SH4hpmH72UvYPB6EJG5icvaa3uE+1fo="></script>
+    "cZOXEmidfhn77999QOhHW8mI7OWos3vYMNsw5Szw6/U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリ食べ物「うな重」【VRChat向け】","description":"--------------------------------------------------\n\n◆うな重\n\nUnity（主にVRChat）で使える食べ物「うな重」です。\n土用の丑の日でなくてもお使い下さい。\n\n--------------------------------------------------\n\n◆「うな重.unitypackage」の中身と情報\n\n□うな重\n┣□Materials\n┃┣〇BaceColor.png\t：ベーステクスチャ\n┃┣〇Material.mat\t：マテリアル（ノーマルシェーダー）\n┃┗〇NormalMap.png\t：ノーマルマップテクスチャ\n┗〇うな重.fbx\t：モデルデータ\n\nポリゴン数\t：△30\n\n--------------------------------------------------\n\n◆注意事項\n\n面倒な利用規約なんてありません。フリー素材です。\n良心に従ってご自由にお使い下さい。\n\n--------------------------------------------------\n\n◆二条阜（ツイッター：https://twitter.com/nizyou2）","url":"https://booth.pm/ja/items/938371","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d587fec6-51e9-4d9d-afa4-8f9825678eca/i/938371/296fd318-490a-412d-a5a0-4afc37ff0eaf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tlWqK1rVDcD0SH4hpmH72UvYPB6EJG5icvaa3uE+1fo="></script>
+    nonce="cZOXEmidfhn77999QOhHW8mI7OWos3vYMNsw5Szw6/U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -348,9 +348,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
