--- a/VRChat/94/937694.html
+++ b/VRChat/94/937694.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LSv2S931svzpd3CNYUPY8gz+91zWeJQFLtYcdpVI9rs="></script>
+    "uU/lqNhZPdf8jhUY9493mQWh2dxBIVt9ucuJjMGF8s8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]喫茶店小物3点セット","description":"VRchat向けアクセサリ：喫茶店小物セット\n\nミルクピッチャー：1020ポリゴン\nおぼん2種類：176ポリゴン\nお砂糖入れ：5898ポリゴン\n上記の三点セットです。\n\n\nこちらのモデルデータは有料モデルですが、フリーで配布しているモデルでもあります。フリーでご利用頂く場合はそちらをご利用ください。\n\n[利用規約]\n\n・営利/非営利問わずご利用いただけます。\n\n・再配布は禁止です。\n\n本モデルデータを使用することによって何らかのトラブル・損失及び損害等が発生した場合でも当方は一切の責任を負いません。\n\nデータはAsset内にある元データのままです。\n導入方法はReadmeをご確認ください。","url":"https://booth.pm/ja/items/937694","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/985386bb-bc6d-41c5-b70d-4286e61a3033/i/937694/0800e456-261d-4aef-a7c8-32c4b5fa1c9f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LSv2S931svzpd3CNYUPY8gz+91zWeJQFLtYcdpVI9rs="></script>
+    nonce="uU/lqNhZPdf8jhUY9493mQWh2dxBIVt9ucuJjMGF8s8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -418,9 +418,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
