--- a/VRChat/01/936301.html
+++ b/VRChat/01/936301.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "GiaX9zVqAovAtI1JUBe1JO1g6uxLuUKXPN9V6sWwpcU="></script>
+    "MdQQu+Y7e3VvI5T/z9QsPSc67M25G0b98724wxTySsg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"まほうつかいのぼうし","description":"まほうつかいのぼうし\n\nV2.0：△2,592\nV1.5：△1,591\n\nば式単眼猫の被っている帽子のおすそ分けです\n導入・改変についてノーサポートでお願いいたします\n","url":"https://booth.pm/ja/items/936301","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/60a161b7-c7bb-4fa2-8dc4-8ac298dd3e5f/i/936301/c7950eec-9960-4703-bf8a-ed6bd5f592c8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GiaX9zVqAovAtI1JUBe1JO1g6uxLuUKXPN9V6sWwpcU="></script>
+    nonce="MdQQu+Y7e3VvI5T/z9QsPSc67M25G0b98724wxTySsg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -632,9 +632,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
