--- a/VRChat/13/935413.html
+++ b/VRChat/13/935413.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+6vXKGLME7DKKKOCJU2eE4JdeB9BqlVagIMzECllQBY="></script>
+    "i6xkAILfdNZ4yEy27AEbB6RqcrbNI2zg0znruWkSUBU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"生体武器「スペアリブ（SP-α-R2）」【VRChat向け】","description":"--------------------------------------------------\n\n◆スペアリブ（SP-α-R2）\n\nUnity（主にVRChat）で使える生体武器「スペアリブ（SP-α-R2）」です。\nご自身のアバターに持たせる、敵キャラに持たせるなどしてお使い下さい。\n\n--------------------------------------------------\n\n◆「SP-α-R2.unitypackage」の中身と情報\n\n□SP-α-R2\n┣□Materials\n┃┣〇BaceColor.png\t：ベーステクスチャ（旧）\n┃┣〇BaceColor2.png\t：ベーステクスチャ\n┃┣〇Material.mat\t：マテリアル（ノーマルシェーダー）\n┃┣〇Metallic.png\t：メタリックテクスチャ（旧）\n┃┣〇Metallic2.png\t：メタリックテクスチャ\n┃┣〇NormalMap.png\t：ノーマルマップテクスチャ（旧）\n┃┗〇NormalMap2.png\t：ノーマルマップテクスチャ\n┣〇SP-α-R2.fbx\t：モデルデータ\n┗〇SP-α-R2.prefab\t：設定済プレハブ\n\nポリゴン数\t：△2756\nBlendShapes\t：剣ニョイーン\n\n--------------------------------------------------\n\n◆注意事項\n\nこの武器の伸び縮みはBlendShapesで行っています。\n伸ばしたい場合は剣ニョイーンを0に、縮めたい場合は100にして下さい。\n旧版のテクスチャを同梱してあります。お好みでどうぞ。\n\n面倒な利用規約なんてありません。フリー素材です。\n良心に従ってご自由にお使い下さい。\n\n--------------------------------------------------\n\n◆二条阜（ツイッター：https://twitter.com/nizyou2）","url":"https://booth.pm/ja/items/935413","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d587fec6-51e9-4d9d-afa4-8f9825678eca/i/935413/4cba12f5-63a5-483f-981d-9529d58e3b0b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+6vXKGLME7DKKKOCJU2eE4JdeB9BqlVagIMzECllQBY="></script>
+    nonce="i6xkAILfdNZ4yEy27AEbB6RqcrbNI2zg0znruWkSUBU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -375,9 +375,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
