--- a/VRChat/57/934957.html
+++ b/VRChat/57/934957.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "M21xzSkHvP2JujinCgryCX3NUzBmyeW/44pPBo2l/dQ="></script>
+    "cbI6kPx3UOjH4SskxD7bH3/qaOoJXPuUROG3bRdz/j4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【サポート終了】オリジナル3Dモデル　NEXIE","description":"◆◇VRアバター向けオリジナル3Dモデル『NEXIE(ネキシィ)ver6.0』紹介文◇◆\n\n※最新の環境でファイルが正常に動作するか保証できません。\nSdk3.0、PBには対応していません。設定済みプレハブも入っていません。その他諸々のセッティングをご自身で出来る方のみご購入ください。\nNFTの発行を禁止します。\n\n■このモデル『NEXIE(ネキシィ)』はVRchatでの使用を想定して制作されたVRアバター向けの3Dモデルです。\n\n\n\n　営利目的での使用は可能です。\n\n　3Dモデルのファイルはfbx,blend,unitypackage形式、その他いくつかの資料（テクスチャや説明書など）をご用意しています。\n\n\n■改変可能です。\n\n　ヒューマノイドボーンのモデルです。\n\n  フルトラッキングでの正常な動作確認済みです。\n\n　リップシンクはVRchatに必要な15種類のリップシンクをご用意しております。\n\n\n■禁止事項\n\n 『NEXIE』とその付属のモデルデータ・テクスチャーデータの再配付・販売は改変の有無を問わず禁止します。\n\n\n■ダウンロードされましたら、まずreadmeに目を通してください。\n\n\n\n\nバージョンアップ情報＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n\n2.0　：ダイナミックボーンなどの揺れものに対応\n　　　 ハンマー追加\n2.1　：ウェイトの塗り残し修正\n3.0　：ポリゴン削減　\n　　　 袖修正\n　　　 飾り多めモデル追加\n3.0.1：肘修正\n4.0  ：首輪修正\n　　　 腕時計追加\n       袖修正\n4.0.3：耳尻尾の動き追加\n5.0　：髪の毛のテクスチャ改良\n　　   ブーツ変更\n6.0　：口内追加\n　　　 表情モーフ追加\u0026作り直し\n　　 　装備を取り外し式に変更\n　　 　不要だとみなした装備品撤去\n      マテリアル数テクスチャ数削減","url":"https://booth.pm/ja/items/934957","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b741927d-7967-46e1-905d-78b9949c6df9/i/934957/11df70e8-7ad4-4797-b7cc-f6fb400a6e29_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="M21xzSkHvP2JujinCgryCX3NUzBmyeW/44pPBo2l/dQ="></script>
+    nonce="cbI6kPx3UOjH4SskxD7bH3/qaOoJXPuUROG3bRdz/j4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -466,9 +466,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
