--- a/VRChat/45/934445.html
+++ b/VRChat/45/934445.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "MFDHLOVt+fkHoSgfbdfBMVbikUcaBilTdxMMaUi4b7A="></script>
+    "0Aupm+jZQh4WJtYVeaSpU1jVO2yNsw7ircXqMOVFCcE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat用オリジナルモデル「Angelica」1.2","description":"VRchat用オリジナルモデル「Angelica」素体バージョン1.2\n\n「Angelica」期間限定セール！\nVKetに合わせ8月中半額、セットアップ済みVRC用assetです。\n\n■Angelicaとは？\n当方がFalloutNewVegasのMODで作った幼女キャラクター（今も無料でどこかにあります）があのまま健やかに育ったらこんな感じかなーとデザインしました。\n\nQ：なぜFS風なの？\nA：いままで作ったMODは大体こんなです、アスカたんの去った後彼女の装備を引き継ぎ世紀末幼兵として生き抜いた結果こうなった、といった感じでしょうか\n\n\n\n■この装備は\nMOD時代をご存知の方には馴染み深いでしょう、これは素体でこの上にアーマーやクロスを装備できるようになる予定です、告知などはツイッターでしますのでぜひフォローしてくださいね。\n\nhttps://twitter.com/KoKoRoBoUZu\n\n\n■基本データ構成\nPolygon数11000\nTexture4096x4096１セット（デフューズ、ノーマル、スペキュラ、発光）\nMaterial数５\nUnityアセット形式１\nVRchat用のリップシンク、ブリンクシェイプ内包\n購入者自身での設定が必要ですが「笑顔」シェイプも入っています\n\n\n\n■Unityアセットでの注意事項\n髪揺れ乳揺れに有料のDynamicBoneを使っています、お持ちでない場合はMissingとなり揺れません。\nShaderに無料のCubedParadoxを使っています下記よりダウンして使ってください、入れることができない人は全てのShaderを標準のUI/Textureにすれば大体似たイメージになります。\n\n※古いバージョンなどでBlueprintIDが入っているものがありました、アップロード等で不具合が起きる場合はdetachして新たなIDでアップロードをお願いします。\n\n\nhttps://github.com/cubedparadox/Cubeds-Unity-Shaders\n\n\n\n■このモデルで許可される事\n　・購入者がVRchat内で使用する改変は自由です\n　・VRchatをメインとした動画等への使用は自由です\n\n\n■禁止事項\n　・再配布は禁止します\n\n　・改変非改変にかかわらずVRchat以外でのご使用はご相談ください。\n\n　・エロ、グロ等18禁への使用は禁止\n　　　※プライベートで非公開な使用は当てはまりません、存分にご使用ください。\n\n　・商用利用禁止\n　　　※商用利用可能なmodelはAssetStore等で販売しますのでそちらをご使用ください。\n　　　※YouTubeなどでVRchat動画による収入は許可します\n\n\n\n■免責事項\n当モデルを使用することで使用者側に不利な問題が生じた場合、\nそれがいかなるものであっても配布元は一切責任を負いません。\n\n\n\n\n■バージョン履歴\n1.2　2018/7/26\n　フルトラッキング向け腰修正、表情笑顔口追加、腰部分の伸び修正、不具合のあったアニメーション削除\n\n1.1　2018/7/20\n　フルトラッキング向けの肩周り、手首のウエイト修正\n　表情「笑顔」追加\n　テクスチャ「生え際」の修正\n　Hipボーンの位置修正\n　カスタムアニメーションファイルの追加\n　アイドルモーション追加\n\n1.0　リリースバージョン","url":"https://booth.pm/ja/items/934445","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/e3df372d-7b3e-4861-9106-df71df45ccc4/i/934445/52980962-43e8-44dd-a630-efc42f57222f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MFDHLOVt+fkHoSgfbdfBMVbikUcaBilTdxMMaUi4b7A="></script>
+    nonce="0Aupm+jZQh4WJtYVeaSpU1jVO2yNsw7ircXqMOVFCcE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -585,9 +585,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
